<resources>
    <string name="app_name">Tea Maker Pro</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">SYNC</string>
    <string name="app_version">Tea Maker Pro (1.0.0)</string>
    <string name="defaultURL">http://</string>
    <string name="defaultKey">LE7FH8N4T2</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="wifi">WIFI</string>
    <string name="wipaddress">WI-FI IP Address <font color="red">*</font></string>
    <string name="mipaddress">Mobile Data IP Address <font color="red">*</font></string>
    <string name="port">Port </string>
    <string name="application">Application <font color="red">*</font></string>
    <string name="prefix">Company ID<font color="red">*</font></string>
    <string name="admusername">Username <font color="red">*</font></string>
    <string name="admpass">Password <font color="red">*</font></string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="kiosk_mode">Kiosk Mode</string>
    <string name="phone_settings">Phone Settings</string>
    <string name="data_settings">Internet Settings</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="enter_password">Enter Pin</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="setting_title">Kiosk Mode Setting</string>
    <string name="setting_lock_device">Lock</string>
    <string name="setting_unlock_device">Unlock</string>
    <string name="setting_device_locked">Device is locked</string>
    <string name="setting_device_unlocked">Device is unlocked</string>
    <string name="kiosk_mode_enabled">Kiosk Mode enabled</string>
    <string name="kiosk_mode_disabled">Kiosk Mode disabled</string>
    <string name="enter_kiosk_mode">Enter Kiosk Mode</string>
    <string name="exit_kiosk_mode">Exit Kiosk Mode</string>
    <string name="kiosk_not_permitted">Kiosk Mode not permitted</string>
    <string name="not_device_admin">This app is not a device admin!</string>
    <string name="not_device_owner">This app is not the device owner!</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_import">Import Master</string>
    <string name="nav_item_refresh">Refresh Masters</string>
    <string name="nav_item_import_user">Import Users</string>
    <string name="nav_item_farmers">Farmers Reciepts</string>
    <string name="nav_item_batches">Batch List</string>
    <string name="nav_item_search">Search Farmer</string>
    <string name="nav_item_bluetooth">Bluetooth Settings</string>
    <string name="nav_item_paired">Pair Devices</string>
    <string name="nav_item_settings">General Settings</string>
    <string name="nav_mode_settings">Mode Settings</string>
    <string name="nav_sub_menu">More</string>
    <string name="nav_sub_menu_item01">Reset Base Date</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="nav_sub_menu_changepass">Change Password</string>
    <string name="nav_sub_menu_kioskmode">Kiosk Mode</string>
    <string name="drawer_header_text">Username</string>
    <string name="search_hint">Search</string>
    <string name="open_shift">NEW</string>
    <string name="close_shift">CLOSE</string>
    <string name="shift_on">Running Shift</string>
    <string name="opened_on">Date</string>
    <string name="export_d">Export Delivery</string>
    <string name="export_b">Export Batch</string>
    <string name="BuyProd"><u>Sourcing From Agent</u></string>
    <string name="BuyProdF"><u>Sourcing From Outgrower</u></string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="ConfirmPassword">Re-type Password</string>
    <string name="Fullname">Full Name</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="username_is_short">Username is short</string>
    <string name="invalid_email">E-mail Invalid</string>
    <string name="password_is_short">Password is short</string>
    <string name="Passwords_does_not_much">Passwords does not much</string>
    <string name="ServerError">Oops!! Didn\'t receive any data from server!</string>
    <string name="LoginError">Please type correct username/password</string>
    <string name="add_farmer">ADD</string>
    <string name="add_user">Add User</string>
    <string name="btn_next">Next</string>
    <string name="btn_print">Print</string>
    <string name="tab0">Weighs</string>
    <string name="tab1">Purchases</string>
    <string name="tab2">Batches</string>
    <string name="please_wait">Please Wait …</string>
    <string name="logging_out">Logging Out …</string>
    <string name="going_manual">Going Manual …</string>
    <string name="spinner_prompt_shop">Select Shop</string>
    <string name="spinner_prompt_ledger">Select Sub-Ledger</string>
    <string name="spinner_prompt_zone">Select Zone</string>
    <string name="spinner_prompt_factory">Select Factory</string>
    <string name="spinner_prompt_session">Select Session</string>
    <string name="spinner_prompt_route">Select Route</string>
    <string name="spinner_prompt_shed">Select Shed</string>
    <string name="spinner_prompt_agent">Select Agent</string>
    <string name="spinner_prompt_produce">Select Produce</string>
    <string name="spinner_prompt_grade">Select Grade</string>
    <string name="spinner_prompt_variety">Select Variety</string>
    <string name="spinner_prompt_warehouse">Select Warehouse</string>
    <string name="spinner_prompt_transporter">Select Transporter</string>
    <string name="spinner_prompt_managed">Select</string>
    <string name="ScaleError">Please select Scale Model to Weigh</string>
    <string name="btnSingle">Add Farmer</string>
    <string name="btnRoute">Add Farmers by Route</string>
    <string name="btnClear">Clear ALL</string>
    <string name="btnClearRoute">Clear by Route</string>
    <string name="btnSave">Save</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDel">Delete</string>
    <string name="title_users">Users</string>
    <string name="title_agent">Agents</string>
    <string name="title_company">Company Setup</string>
    <string name="title_factory">Factories</string>
    <string name="title_zone">Zones</string>
    <string name="title_weigh_sorted">WEIGH SORTED</string>
    <string name="title_produce">Produce</string>
    <string name="title_grade">Grades</string>
    <string name="title_upload">Upload</string>
    <string name="device_details">Device Details</string>
    <string name="device_phone">Device Phone</string>
    <string name="device_serial">Device Serial</string>
    <string name="device_factory">Device Factory</string>
    <string name="company_details">Company Details</string>
    <string name="company_prefix">Prefix</string>
    <string name="company_name">Name</string>
    <string name="company_letterbox">LetterBox</string>
    <string name="company_postalcode">Postal Code</string>
    <string name="company_postalname">Post Name</string>
    <string name="company_postregion">Region</string>
    <string name="company_posttel">Telephone</string>
    <string name="receiptSettings">Receipt Settings</string>
    <string name="Language">Receipt Language</string>
    <string name="tareWeight">Tare Weight</string>
    <string name="moisture">Moisture Provision</string>
    <string name="terminalID">Terminal ID</string>
    <string name="autoLogout">User Session Timeout</string>
    <string name="defaultValue">0</string>
    <string name="bagWeight">Bag Weight</string>
    <string name="enablePrinting">Enable Printing</string>
    <string name="enableQuality">Enable Quality</string>
    <string name="enableSMS">Enable SMS</string>
    <string name="enableSMSSummary">This will enable sending of SMS on Realtime Mode</string>
    <string name="enableAdmin">Enable Admin Weighing</string>
    <string name="enableAdminSummary">This will enable the admin to perform Sample Weighing</string>
    <string name="bagWeightSummary">This will set the bag Weight</string>
    <string name="enableSimilar">Allow Similar Consecutive Weighments</string>
    <string name="prefSimilarSummary">This will enable similar consecutive weighments.</string>
    <string name="enableShifts">Enable or Disable Shifts</string>
    <string name="prefCategory">General Settings</string>
    <string name="prefCategoryWeighing">Weighing Settings</string>
    <string name="cloudSettings">Cloud Settings</string>
    <string name="modeSettings">URL Mode Settings</string>
    <string name="prefTareSummary">"Enter tare weight here. It has to be greater than 0 and less than 9.9"</string>
    <string name="prefMoistureSummary">"Enter Moisture %. It has to be greater than 0.0 and less than 25.0"</string>
    <string name="prefPrintingSummary">"This will enable printing.Make sure you have the printer set."</string>
    <string name="prefQualitySummary">"This will enable quality. Make sure you have the quality set."</string>
    <string name="prefShiftsSummary">This will enable or disable use of shifts(AM/PM/PM1).</string>
    <string name="stabilityReading">Samples to accept reading</string>
    <string name="stabilitySummary">Number of readings to use to get a stable reading</string>
    <string name="stabilityDefaultValue">2</string>
    <string name="stabilityTime">Milliseconds of reading samples</string>
    <string name="stabilitySummaryT">Number of milliseconds used to get a stable reading</string>
    <string name="stabilityDefaultValueT">200</string>
    <string name="sdSettings">Memory Card Settings</string>
    <string name="sdServices">Enable SDCard Backup</string>
    <string name="sdServicesSummary">This will enable saving of a Data Backup file to the Memory Card</string>
    <string name="realtimeServices">Enable Realtime Services</string>
    <string name="realtimeServicesSummary">This will enable realtime data transmission to the Easyway cloud platform</string>
    <string name="autorefreshMaster">Enable Auto Refresh Masters</string>
    <string name="autorefreshMasterSummary">This will enable auto refreshing of Masters on opening the First Batch</string>
    <string name="cloudServices">Enable Cloud Services</string>
    <string name="cloudServicesSummary">This will enable access to the Easyway cloud platform</string>
    <string name="portalURL">WI-FI URL Portal</string>
    <string name="portalURLSummary">Enter the WI-FI URL to access the Easyway cloud services</string>
    <string name="mdportalURL">Mobile-Data URL Portal</string>
    <string name="mdportalURLSummary">Enter the Mobile-Data URL to access the Easyway cloud services</string>
    <string name="coPort">Port</string>
    <string name="coPortSummary">Enter the Port to access the Easyway cloud services</string>
    <string name="coApp">Application</string>
    <string name="coAppSummary">Enter the Application to access the Easyway cloud services</string>
    <string name="scaleSettings">Scale Settings</string>
    <string name="vModes">Verification Modes</string>
    <string name="verificationModesSummary">Select the Verification Mode to be used with this phone</string>
    <string name="scaleModel">Scale Model</string>
    <string name="weighingAlgorithm">Weighing Algorithm</string>
    <string name="scaleVersionSummary">Select the Easyweigh Scale Version to be used with this phone</string>
    <string name="weighingAlgorithmSummary">Select the Weighing Algorithm to be used when recording weight</string>
    <string name="internetAccessModeSummary">Select your preferred mode of data access</string>
    <string name="internetAccessMode">Preferred Data Access Mode</string>
    <string name="refresh">Refresh</string>
    <string name="refreshSummary">Updates Company Details &amp; Users</string>
</resources>